deployments/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: tumbo-dev
  labels:
    name: tumbo-dev
